--- a/about.css
+++ b/about.css
@@ -36,12 +36,20 @@ p{
     margin-left: 25px;
 }
 
+.our_mission p img {
+    width: 300px;
+    height: 300px;
+    margin-right: 25px;
+}
+
 ul li {
     list-style: none;
     margin: 10px;
     font-size: 20px;
     color: aliceblue;
     width: fit-content;
+    justify-content: center;
+    align-items: center;
 }
 
 ul{
