[ADD] badges for the engagement page

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(assets/building-dawn.jpg);
+    /* background-image: url(assets/building-dawn.jpg); */
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
