--- a/style/home.css
+++ b/style/home.css
@@ -1,3 +1,10 @@
+body {
+    background-image: url(assets/building-dawn.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
 h2 {
     text-align: center;
     font-size: 30px;
