--- a/style/about.css
+++ b/style/about.css
@@ -1,49 +1,46 @@
 
-
-.about img {
-    margin: auto;
+img.laught {
+    margin-top: 180px;
+    margin-left: 12vw;
+    margin-right: 12vw;
     text-align: center;
 }
 
-.about h2 {
+ h2 {
     text-align: center;
     font-size: 30px;
-    text-transform: lowercase;
-    font-family: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
     color: rgb(226, 126, 4);
-    background-color: aliceblue;
+    border-bottom: 1px solid rgb(226, 126, 4);
+    padding-bottom: 15px;
     height: 50px;
-    margin: auto;
+    margin-left: 12vw;
+    margin-right: 12vw;
 }
 
-p{
+p {
+    margin-left: 12vw;
+    margin-right: 12vw;
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
-    font-size: 25px;
-    color: rgb(0, 0, 0);
+    flex: 1 0 200px; 
+    font-size: 20px;
+    color: rgb(118, 116, 116);
     justify-content: center;
     width: auto;
 }
 
-.title1 p img {
+p img {
     width: 300px;
     height: 300px;
     margin-right: 25px;
 }
 
-.title4 p img {
-    width: 300px;
-    height: 300px;
-    margin-left: 25px;
-}
-
-.our_mission p img {
-    width: 300px;
-    height: 300px;
-    margin-right: 25px;
-}
-
-ul{
+.list ul{
     display: flex;
+    margin-left: 12vw;
+    margin-right: 12vw;
     flex-wrap: wrap;
     width: fit-content;
     justify-content: center;
@@ -51,8 +48,9 @@ ul{
     text-align: center;
 }
 
-ul li {
+.list ul li {
     flex: 1 0 70px;
+    display: block;
     list-style: none;
     margin: 10px;
     font-size: 20px;
@@ -63,7 +61,8 @@ ul li {
     text-align: center;
 }
 
-ul li img {
-    flex: 1 0 70px;
-    margin: 35px;
+.list ul li img {
+    width: 100px;
+    height: 100px;
+    margin-right: 25px;
 }
