--- a/style/home.css
+++ b/style/home.css
@@ -1,10 +1,3 @@
-body {
-    background-image: url(assets/building-dawn.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-
 h2 {
     text-align: center;
     font-size: 30px;
@@ -23,7 +16,7 @@ p {
 }
 
 .halim {
-    margin: auto;
+    margin-top: 140px;
     text-align: center;
 }
 
