[ORG-ADJST] Repositorie cleaned and organised Adjustment of pages

--- a/about/style/values.css
+++ b/about/style/values.css
@@ -17,6 +17,7 @@ body img.ofa {
     border-bottom: 1px solid rgb(245, 121, 33);
     margin-left: 12vw;
     margin-right: 12vw;
+    margin-top: 30px;
     margin-bottom: 50px;
     padding-bottom: 15px;
 }
