--- a/about/style/engagement.css
+++ b/about/style/engagement.css
@@ -17,6 +17,7 @@
     margin-left: 12vw;
     margin-right: 12vw;
     margin-bottom: 80px;
+    margin-top: 40px;
     border-bottom: 1px solid rgb(226, 126, 4);
 }
 
