--- a/about/style/key.css
+++ b/about/style/key.css
@@ -20,8 +20,10 @@ h2 {
     padding-bottom: 15px;
     margin-left: 10vw;
     margin-right: 10vw;
+    margin-bottom: 30px;
+    margin-top: 30px;
     border-bottom: 1px solid #ee8412;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 .some-numbers ul {
