--- a/about/style/about.css
+++ b/about/style/about.css
@@ -21,6 +21,7 @@ img.laught {
 }
 
 p {
+    margin-top: 20px;
     margin-left: 12vw;
     margin-right: 12vw;
     font-family: Arial, Helvetica, sans-serif;
@@ -36,6 +37,7 @@ p img {
     width: 300px;
     height: 300px;
     margin-right: 25px;
+    padding-left: 25px;
 }
 
 .list ul{
