--- a/style/style.css
+++ b/style/style.css
@@ -4,13 +4,14 @@
 
 a.home {
     text-decoration: none;
-    color: #000
+    color: #fffffff1
 }
 
 nav.navbar {
-    margin-top: 116px;
-    background-color: rgb(134, 134, 133);
+    margin-top: 50px;
+    background-color: rgb(233, 233, 233);
     border-radius: 0px 0px 10px 10px;
+    
     width: 100%;
     position: fixed;
 }
@@ -30,7 +31,7 @@ li.navbar {
 li.navbar a {
     display: block;
     padding: 10px 20px;
-    color: #fff;
+    color: #656565;
     text-decoration: none;
 }
   
@@ -50,7 +51,7 @@ li.navbar a {
 
 .drop li a {
     text-decoration: none;
-    color: #000000;
+    color: #656565;
 }
 
 .drop {
@@ -60,19 +61,16 @@ li.navbar a {
 
 .header {
     display: flex;
-    background-image: linear-gradient(to right, rgb(244, 178, 127), rgb(250, 103, 11));
+    /* background-image: linear-gradient(to right, rgb(244, 178, 127), rgb(250, 103, 11)); */
+    background-color: rgb(237, 106, 24);
     padding: 8px;
     text-align: left;
-    font-family: 'bob';
+    font-family: Arial, Helvetica, sans-serif;
     border-radius: 10px 10px 0px 0px;
     position: fixed;
     width: 100%;
 }
 
-@font-face {
-    font-family: 'bob';
-    src: url(fonts/Greating.ttf);
-}
 
 .barre-de-contact {
     background-color: rgba(110, 113, 116, 0.79);
