--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ a.home {
 }
 
 nav.navbar {
-    margin-top: 50px;
+    margin-top: 85px;
     background-color: rgb(233, 233, 233);
     border-radius: 0px 0px 10px 10px;
     
@@ -66,9 +66,9 @@ li.navbar a {
     padding: 8px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
-    border-radius: 10px 10px 0px 0px;
     position: fixed;
     width: 100%;
+    height: auto;
 }
 
 
