--- a/style/style.css
+++ b/style/style.css
@@ -38,16 +38,17 @@ li.navbar a {
 }
   
 .navbar li a:hover {
+    transition: 0.2s;
     background-color: #555555c4;
     color: #f88a0d;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .navbar li:hover .drop {
-    /* position: absolute; */
+    transition: 0.2s;
     display: block;
     border: 1px solid #000;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: rgb(220, 216, 216);
     list-style-type: none;
 }
@@ -102,8 +103,4 @@ li.navbar a {
     text-decoration: none;
     color: #e78c05;
 }
-/* .le-mot-du-président {
-    padding: 20px;
-    text-align: center;
-    border-radius: 10px 10px 0px 0px;
-} */
+
