[UPDATE] Adding jobs offers page and contact page connected to the intranet. References switched to the beginning of the page with a spawning description. Freed of overcharging elements

--- a/implantation/style/implantation.css
+++ b/implantation/style/implantation.css
@@ -39,7 +39,7 @@ h1.title {
     height: 500px;
     margin-top: 20px;
     margin-right: auto;
-    margin-left: auto;
+    margin-left: 33%;
 
 }
 
