--- a/services/style/proprete.css
+++ b/services/style/proprete.css
@@ -1,4 +1,4 @@
-/* * {
+* {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -239,4 +239,4 @@ div.sectors-small div {
     width: auto;
     height: 200px;
     margin-bottom: 45px;
-} */
+}
