--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,14 @@
 
 a.home {
     text-decoration: none;
-    color: #fffffff1
+    color: #fffffff1;
+    font-size: 65px;
+}
+
+h1 {
+    text-decoration: none;
+    color: #fffffff1;
+    font-size: 45px;
 }
 
 nav.navbar {
@@ -17,18 +24,22 @@ nav.navbar {
     list-style-type: none;
     width: 100%;
     position: fixed;
+    z-index: 1;
 }
 
 ul.navbar {
   list-style-type: none;
+  list-style: none;
   margin: 0;
   padding: 0;
   position: relative;
 }
 
 li.navbar {
-  display: inline-block;
-  vertical-align: top;
+    list-style-type: none;
+    list-style: none;
+    display: inline-block;
+    vertical-align: top;
 }
 
 li.navbar a {
@@ -51,9 +62,12 @@ li.navbar a {
     border-radius: 5px;
     background-color: rgb(220, 216, 216);
     list-style-type: none;
+    list-style: none;
 }
 
 .drop li a {
+    list-style-type: none;
+    list-style: none;
     text-decoration: none;
     color: #656565;
 }
@@ -74,6 +88,7 @@ li.navbar a {
     position: fixed;
     width: 100%;
     height: auto;
+    z-index: 1;
 }
 
 
