--- a/style/style.css
+++ b/style/style.css
@@ -81,7 +81,7 @@ li.navbar a {
 .header {
     display: flex;
     /* background-image: linear-gradient(to right, rgb(244, 178, 127), rgb(250, 103, 11)); */
-    background-color: rgb(237, 106, 24);
+    background-color: rgb(221,123,16);
     padding: 8px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
