--- a/services/style/proprete.css
+++ b/services/style/proprete.css
@@ -240,3 +240,61 @@ div.sectors-small div {
     height: 200px;
     margin-bottom: 45px;
 }
+
+@media screen and (max-width: 770px) {
+    .references ul {
+        display: flex;
+        flex-direction: column;
+        margin-left: 12%;
+        margin-right: 12%;
+        margin-bottom: 45px;
+    }
+
+    div.dual {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-left: 12%;
+        margin-right: 12vw;
+        margin-bottom: 45px;
+    }
+
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .nos-engagements div img {
+        width: 90%;
+        height: auto;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    .wrapper img {
+        width: 90%;
+        height: auto;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    .certif-img {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+      }
+      .certif-img img {
+        width: auto;
+        height: auto;
+        margin-bottom: 45px;
+    }
+
+    div.sectors {
+        display: flex;
+        flex-direction: column;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 45px;
+    }
+
+}
