--- a/services/style/references.css
+++ b/services/style/references.css
@@ -36,6 +36,10 @@ div.flex-ref {
         /* transform: translate3d(-60%, -20%, 0px); */
         position: relative;
     }
+    .ref {
+        width: 90%;
+        height: auto;
+    }
 }
 
 .ref {
