--- a/services/style/maintenance.css
+++ b/services/style/maintenance.css
@@ -101,3 +101,28 @@ h3 {
     background-color: rgb(194, 194, 194);
     border-radius: 15px;
 }
+
+@media screen and (max-width: 770px) {
+    img.title {
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+    }
+
+    .Prestation_Multitechnique {
+        width: 100%;
+        height: auto;
+    }
+
+    .back {
+        width: 100%;
+    }
+
+    div.row {
+        display: flex;
+        flex-direction: column;
+        margin-left: 14%;
+        margin-right: 14%;
+        margin-bottom: 45px;
+    }
+}
