--- a/about/style/key.css
+++ b/about/style/key.css
@@ -120,6 +120,18 @@ h2 {
 }
 
 @media screen and (max-width: 768px) {
+    h1.title {
+        padding-top: 200px;
+    }
+    
+    .cleaning {
+        width: 90%;
+        height: auto;
+        margin-top: 45px;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    
     .chiffres {
         flex-direction: column;
         align-items: center;
