--- a/about/style/values.css
+++ b/about/style/values.css
@@ -1,9 +1,9 @@
 body img.ofa {
     text-align: center;
-    max-width: 98%;
+    width: 90%;
     height: auto;
-    margin-left: 10vw;
-    margin-right: 10vw;
+    margin-left: 5%;
+    margin-right: 5%;
     margin-top: 180px;
     image-rendering: optimizeSpeed;
 }
@@ -94,7 +94,7 @@ ul li img {
     .ofa {
         padding-top: 200px;
         width: 90%;
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: 5%;
+        margin-right: 5%;
     }
 }
