--- a/style/style.css
+++ b/style/style.css
@@ -96,12 +96,12 @@ li.navbar a {
     background-color: rgba(110, 113, 116, 0.79);
     margin: 0;
     /* margin-top: 50px; */
-    padding-top: 180px;
+    padding-top: 50px;
     display: flex;
-    justify-content: right;
+    /* justify-content: right; */
     border-radius: 10px;
     width: 100%;
-    height: 120px;
+    height: 80px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
